# python-graphql-template

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: __init__.py  logger.py
models/: schema.py
src/: app.py  main.py
