[project]
name = "python-graphql-template"
dynamic = ["version"]
readme = "README.md"
description = "Python GraphQL Template"
keywords = ["python", "graphql", "template"]
license = "MIT"

maintainers = [
  {name = "Firstname Lastname", email = "you@domain.com"}
]

#[project.scripts]
#spam-cli = "spam:main_cli"
